--- a/CodeKeep/Style.css
+++ b/CodeKeep/Style.css
@@ -151,3 +151,39 @@ body {
     border-left: 8px solid steelblue;
 }
 
+.cerrar {
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    
+}
+
+/*
+    ESTA PARTE ES PARA ADMINISTRADOR
+*/
+
+.formad {
+    height: 586px;
+    width: 1536px;
+    position: absolute;
+    top: 67%;
+    left: 50%;
+    transform: translate(-50%,-67%);
+}
+
+.adadmin {
+    background-color: dimgray;
+    height: 300px;
+    width: 500px;
+    font: 25px serif;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border-top: 8px solid steelblue;
+    border-right: 8px solid steelblue;
+    border-bottom: 8px solid steelblue;
+    border-left: 8px solid steelblue;
+}
+
