--- a/CodeKeep/Style.css
+++ b/CodeKeep/Style.css
@@ -187,3 +187,55 @@ body {
     border-left: 8px solid steelblue;
 }
 
+/*
+    PARA REGISTRO CUENTA
+*/
+
+.formreg {
+    background-color: dimgray;
+    height: 500px;
+    width: 700px;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%,-60%);
+    border-top: 8px solid steelblue;
+    border-right: 8px solid steelblue;
+    border-bottom: 8px solid steelblue;
+    border-left: 8px solid steelblue;
+}
+.adformreg {
+    height: 500px;
+    width: 300px;
+    font: 25px serif;
+    position: absolute;
+    top: 4%;
+    left: 0%;
+    transform: translate(-0%,-7%);
+    text-align: center;
+}
+
+.adformregizq {
+    height: 500px;
+    width: 300px;
+    font: 25px serif;
+    position: absolute;
+    top: 4%;
+    left: 95%;
+    transform: translate(-95%,-6%);
+    text-align: center;
+}
+.botoncarga {
+    position: absolute;
+    top: 95%;
+    left: 50%;
+    transform: translate(-50%,-95%);
+    font: 25px serif;
+}
+.titulo {
+    position: absolute;
+    top: 3%;
+    left: 50%;
+    transform: translate(-50%,-3%);
+    font: 25px serif;
+}
