--- a/CodeKeep/Style.css
+++ b/CodeKeep/Style.css
@@ -158,6 +158,37 @@ body {
     
 }
 
+.divconsul {
+    background-color: dimgray;
+    height: 500px;
+    width: 400px;
+    font: 25px serif;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    transform: translate(-5%,-50%);
+    border-top: 8px solid steelblue;
+    border-right: 8px solid steelblue;
+    border-bottom: 8px solid steelblue;
+    border-left: 8px solid steelblue;
+}
+
+.divinser {
+    background-color: dimgray;
+    height: 500px;
+    width: 400px;
+    font: 25px serif;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    transform: translate(-5%,-50%);
+    border-top: 8px solid steelblue;
+    border-right: 8px solid steelblue;
+    border-bottom: 8px solid steelblue;
+    border-left: 8px solid steelblue;
+}
 /*
     ESTA PARTE ES PARA ADMINISTRADOR
 */
